# df-api

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  bot_simple.cpp
include/dfapi/: df_connection.h
src/: CMakeLists.txt
src/dfapi/: df_connection.cpp
tests/: CMakeLists.txt  all_tests.cpp
